Fixed mobile menu spacing (text is now centered)

--- a/portfolio-website/src/components/Navbar/Navbar.css
+++ b/portfolio-website/src/components/Navbar/Navbar.css
@@ -85,9 +85,13 @@
     }
 
     .nav-links {
-        margin: 0px;
+        margin-left: 0px;
+        margin-right: 0px;
         text-align: center;
-        padding: 1.5rem; /*Change*/
+        padding: 0rem; /*Change*/
+        padding-top: 10px;
+        padding-bottom: 10px;
+
         width: 100%; /*Change*/
         display: table;
         border: 1px solid green; /*Change for checking spacing*/
@@ -120,6 +124,7 @@
         font-size: 2rem;
     }
 
+    /*
     
     .nav-links-mobile {
         display: block;
@@ -143,5 +148,6 @@
     Button {
         display: none;
     }
+    */
 
 }
